--- a/localisation/ac_decision_l_russian.yml
+++ b/localisation/ac_decision_l_russian.yml
@@ -2,13 +2,13 @@
 #ac_anime_characters_category
  ac_anime_characters_category:0 "Аниме персонажи"
  ac_take_girls:0 "Добавить девушек"
- ac_take_girls_tt:0 "Буде добавлено множество девушек"
+ ac_take_girls_tt:0 "Будет добавлено множество девушек"
  ac_take_androids:0 "Добавить девушек андроидов"
- ac_take_androids_tt:0 "Буде добавлено множество девушек андроидов"
+ ac_take_androids_tt:0 "Будет добавлено множество девушек андроидов"
  ac_take_monsters:0 "Добавить девушек монстров"
- ac_take_monsters_tt:0 "Буде добавлено множество дувушек монстров"
+ ac_take_monsters_tt:0 "Будет добавлено множество дувушек монстров"
  ac_take_traps:0 "Добавить трапов"
- ac_take_traps_tt:0 "Буде добавлено множество трапов.\n§RАхтунг!§!"
+ ac_take_traps_tt:0 "Будет добавлено множество трапов.\n§RАхтунг!§!"
  ac_change_leader_to_anastasia_romanova:0 "Назначить  §GАнастасию Романову§! лидером"
  ac_change_leader_to_histoire:0 "Назначить  §GИстуар§! лидером"
  ac_change_leader_to_velvet_crowe:0 "Назначить  §GВельвет Крау§! лидером"
