--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -18,16 +18,16 @@
  ac_lightning:0 "Lightning"
  ac_mamako_oosuki:0 "Mamako Oosuki"
  ac_anastasia_romanova:0 "Anastasia Romanova"
- ac_saint_martha:0 "Святая Марта"
- ac_nishizumi_miho:0 "Нисидзуми Михо"
- ac_asuna_yuuki:0 "Асуна Юки"
- ac_mash_kyrielight:0 "Мэш Кириелайт"
- ac_maple:0 "Мейпл"
- ac_yoko_littner:0 "Ёко Литтнер"
- ac_kallen_stadtfeld:0 "Каллен Стадтфилд"
- ac_saki_rukino:0 "Саки Рукино"
- ac_kurumi_tokisaki:0 "Куруми Токисаки"
- ac_sanya_v_litvyak:0 "Саня В. Литвяк"
+ ac_saint_martha:0 "Saint Martha"
+ ac_nishizumi_miho:0 "Nishizumi Miho"
+ ac_asuna_yuuki:0 "Asuna Yuuki"
+ ac_mash_kyrielight:0 "Mash Kyrielight"
+ ac_maple:0 "Maple"
+ ac_yoko_littner:0 "Yoko Littner"
+ ac_kallen_stadtfeld:0 "Kallen Stadtfeld"
+ ac_saki_rukino:0 "Saki Rukino"
+ ac_kurumi_tokisaki:0 "Kurumi Tokisaki"
+ ac_sanya_v_litvyak:0 "Sanya V. Litvyak"
  ac_isuzu_sento:0 "Исузу Сэнто"
  ac_volemia:0 "Волемия"
  ac_camilla:0 "Камилла"
