--- a/localisation/ac_decision_l_english.yml
+++ b/localisation/ac_decision_l_english.yml
@@ -18,6 +18,14 @@
  ac_velvet_crowe_taked_tt:0 "§GVelvet Crowe§!"
  ac_astolfo_taked_tt:0 "§BAstolfo§!"
  ac_deactivate:0 "Hide category"
+ ac_change_leader_to_alisa_illinichina_amiella:0 "Assign §GAlisa Illinichina Amiella§! the leader"
+ ac_alisa_illinichina_amiella_taked_tt:0 "§GAlisa Illinichina Amiella§!"
+ ac_change_leader_to_t_elos:0 "Assign §GT-Elos§! the leader"
+ ac_t_elos_taked_tt:0 "§GT-Elos§!"
+ ac_change_leader_to_yuuko_yoshida:0 "Assign §GYuuko Yoshida§! the leader"
+ ac_yuuko_yoshida_tt:0 "§GYuuko Yoshida§!"
+ ac_change_leader_to_homare_nao:0 "Assign §GHomare Nao§! the leader"
+ ac_homare_nao_taked_tt:0 "§GHomare Nao§!"
 
 #ac_anime_characters_reactivate_category
  ac_anime_characters_reactivate_category:0 "Reopen the anime character category"
