--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -28,34 +28,34 @@
  ac_saki_rukino:0 "Saki Rukino"
  ac_kurumi_tokisaki:0 "Kurumi Tokisaki"
  ac_sanya_v_litvyak:0 "Sanya V. Litvyak"
- ac_isuzu_sento:0 "Исузу Сэнто"
- ac_volemia:0 "Волемия"
- ac_camilla:0 "Камилла"
- ac_sinon:0 "Сино Асада"
- ac_kaname_chidori:0 "Канамэ Тидори"
- ac_yoshiko_tsushima:0 "Йошико Цушима"
- ac_ranko_kanzaki:0 "Ранко Кандзаки"
- ac_elma:0 "Эльма"
- ac_ako_tamaki:0 "Ако Тамаки"
- ac_celica:0 "Селика"
- ac_cryska_barchenowa:0 "Криска Барченова"
- ac_fiora:0 "Фиора"
- ac_haruhi_suzumiya:0 "Харухи Судзумия"
- ac_kiana_kaslana:0 "Киана Каслана"
- ac_konoko:0 "Коноко"
- ac_lina_inverse:0 "Лина Инверс"
- ac_neptune:0 "Нептун"
- ac_ryuuko_matoi:0 "Рюко Матой"
- ac_satellizer_el_bridget:0 "Сателлайза эль Бриджит"
- ac_siluca_meletes:0 "Силука Мелетес"
- ac_yuno_gasai:0 "Юно Гасай"
- ac_byleth_eisner:0 "Белет Айснер"
- ac_eula:0 "Эула"
- ac_5pb:0 "Файвпиби"
- ac_blanc:0 "Блан"
- ac_compa:0 "Компа"
- ac_djeeta:0 "Джита"
- ac_ellis:0 "Эллис"
+ ac_isuzu_sento:0 "Isuzu Sento"
+ ac_volemia:0 "Volemia"
+ ac_camilla:0 "Camilla"
+ ac_sinon:0 "Sinon"
+ ac_kaname_chidori:0 "Kaname Chidori"
+ ac_yoshiko_tsushima:0 "Yoshiko Tsushima"
+ ac_ranko_kanzaki:0 "Ranko Kanzaki"
+ ac_elma:0 "Elma"
+ ac_ako_tamaki:0 "Ako Tamaki"
+ ac_celica:0 "Celica"
+ ac_cryska_barchenowa:0 "Cryska Barchenowa"
+ ac_fiora:0 "Fiora"
+ ac_haruhi_suzumiya:0 "Haruhi Suzumiya"
+ ac_kiana_kaslana:0 "Kiana Kaslana"
+ ac_konoko:0 "Konoko"
+ ac_lina_inverse:0 "Lina Inverse"
+ ac_neptune:0 "Neptune"
+ ac_ryuuko_matoi:0 "Ryuuko Matoi"
+ ac_satellizer_el_bridget:0 "Satellizer El Bridget"
+ ac_siluca_meletes:0 "Siluca Meletes"
+ ac_yuno_gasai:0 "Yuno Gasai"
+ ac_byleth_eisner:0 "Byleth Eisner"
+ ac_eula:0 "Eula"
+ ac_5pb:0 "5pb"
+ ac_blanc:0 "Blanc"
+ ac_compa:0 "Compa"
+ ac_djeeta:0 "Djeeta"
+ ac_ellis:0 "Ellis"
  ac_escha_malier:0 "Эска Мальер"
  ac_fujimaru_ritsuka:0 "Рицука Фудзимару"
  ac_honoka_kousaka:0 "Хонока Косака"
