--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -56,72 +56,72 @@
  ac_compa:0 "Compa"
  ac_djeeta:0 "Djeeta"
  ac_ellis:0 "Ellis"
- ac_escha_malier:0 "Эска Мальер"
- ac_fujimaru_ritsuka:0 "Рицука Фудзимару"
- ac_honoka_kousaka:0 "Хонока Косака"
- ac_if:0 "Ай-Эф"
- ac_kasumi:0 "Касуми"
- ac_merurulince_rede_arls:0 "Мерурулинце Реде Арлс"
- ac_miho_nishizumi:0 "Михо Нисидзуми"
- ac_misato_katsuragi:0 "Мисато Кацураги"
- ac_naru_narusegawa:0 "Нару Нарусэгава"
- ac_noire:0 "Нуар"
- ac_rei_ayanami:0 "Рей Аянами"
- ac_ryza:0 "Райза"
- ac_selesia_upitiria:0 "Селезия Юпитилия"
- ac_sophie_neuenmuller:0 "София Неунмюллер"
- ac_vert:0 "Вер"
- ac_yukina_himeragi:0 "Юкина Химэраги"
- ac_yuna:0 "Юна"
- ac_yamato_kancol:0 "Ямато КанКол"
- ac_atago_azur_lane:0 "Атаго Лазурный путь"
- ac_avrora_azur_lane:0 "Аврора Лазурный путь"
- ac_belfast:0 "Белфаст Лазурный путь"
- ac_marblehead:0 "Марблхэд Лазурный путь"
- ac_saint_louis_azur_lane:0 "Святой Луиз Лазурный путь"
- ac_takao_azur_lane:0 "Такао Лазурный путь"
- ac_tosa_azur_lane:0 "Тоса Лазурный путь"
- ac_sovetskaya_rossiya:0 "Советская Россия Лазурный путь"
- ac_shima_tateishi:0 "Сима Татэиси"
- ac_akeno_misaki:0 "Акэно Мисаки"
- ac_beidou:0 "Бэйдоу"
- ac_takumi_musashino:0 "Такуми Мусасино"
- ac_saori_asamiya:0 "Саори Асамия"
- ac_mari_setogaya:0 "Мари Сеготая"
- ac_sheliss_elleness_zurbach:0 "Шелис Эленес Зурбах"
- ac_olga_discordia:0 "Ольга Дискордия"
- ac_celestine_lucullus:0 "Селестина Лукулл"
- ac_mistiora_arte:0 "Мистиора Арте"
- ac_iris_arcadia:0 "Ирис Аркадия"
- ac_homare_nao:0 "Хомаре Нао"
- ac_igawa_asagi:0 "Асаги Игава"
- ac_anri_sogahara:0 "Анри Согахара"
- ac_rina_komiya:0 "Рина Комия"
- ac_anna_komiya:0 "Анна Комия"
- ac_yuuki_kawaragi:0 "Юки Кавараги"
- ac_tsubasa_kamijo:0 "Цубаса Камиджо"
- ac_prim_fiorire:0 "Прим Фиори"
- ac_cloe:0 "Хлоя"
- ac_claudia_le_van_tyne:0 "Клаудия ле Ван Тин"
- ac_alicia_arcturus:0 "Алисия Арктур"
- ac_risa:0 "Риса"
- ac_kasumi_nanakura:0 "Касуми Нанакура"
- ac_kaname:0 "Канамэ"
- ac_suomi:0 "Суоми"
- ac_akiho_Taniguchi:0 "Акихо Танигути"
- ac_sill_plain:0 "Силл Плейн"
- ac_mika_amano:0 "Мика Амано"
- ac_asuka_ootorii:0 "Асука Отории"
- ac_nanoha_takamachi:0 "Наноха Такамати"
- ac_usagi_tsukino:0 "Усаги Цукино"
- ac_momo_chiyoda:0 "Момо Тиёда"
- ac_hitomi_tsukishiro:0 "Хитоми Цукисиро"
- ac_madoka_kaname:0 "Мадока Канамэ"
- ac_illyasviel_von_einzbern:0 "Иллиясфиль фон Айнцберн"
- ac_arika_yumemiya:0 "Арика Юмэмия"
- ac_ami_mizuno:0 "Ами Мизуно"
- ac_makoto_kino:0 "Макото Кино"
- ac_minako_aino:0 "Минако Айно"
+ ac_escha_malier:0 "Escha Malier"
+ ac_fujimaru_ritsuka:0 "Fujimaru Ritsuka"
+ ac_honoka_kousaka:0 "Honoka Kousaka"
+ ac_if:0 "IF"
+ ac_kasumi:0 "Kasumi"
+ ac_merurulince_rede_arls:0 "Merurulince Rede Arls"
+ ac_miho_nishizumi:0 "Miho Nishizumi"
+ ac_misato_katsuragi:0 "Misato Katsuragi"
+ ac_naru_narusegawa:0 "Naru Narusegawa"
+ ac_noire:0 "Noire"
+ ac_rei_ayanami:0 "Rei Ayanami"
+ ac_ryza:0 "Ryza"
+ ac_selesia_upitiria:0 "Selesia Upitiria"
+ ac_sophie_neuenmuller:0 "Sophie Neuenmuller"
+ ac_vert:0 "Vert"
+ ac_yukina_himeragi:0 "Yukina Himeragi"
+ ac_yuna:0 "Yuna"
+ ac_yamato_kancol:0 "Yamato"
+ ac_atago_azur_lane:0 "Atago"
+ ac_avrora_azur_lane:0 "Avrora"
+ ac_belfast:0 "Belfast"
+ ac_marblehead:0 "Marblehead"
+ ac_saint_louis_azur_lane:0 "Saint Louis"
+ ac_takao_azur_lane:0 "Takao"
+ ac_tosa_azur_lane:0 "Tosa"
+ ac_sovetskaya_rossiya:0 "Sovetskaya Rossiya"
+ ac_shima_tateishi:0 "Shima Tateishi"
+ ac_akeno_misaki:0 "Akeno Misaki"
+ ac_beidou:0 "Beidou"
+ ac_takumi_musashino:0 "Takumi Musashino"
+ ac_saori_asamiya:0 "Saori Asamiya"
+ ac_mari_setogaya:0 "Mari Setogaya"
+ ac_sheliss_elleness_zurbach:0 "Sheliss Elleness Zurbach"
+ ac_olga_discordia:0 "Olga Discordia"
+ ac_celestine_lucullus:0 "Celestine Lucullus"
+ ac_mistiora_arte:0 "Mistiora Arte"
+ ac_iris_arcadia:0 "Iris Arcadia"
+ ac_homare_nao:0 "Homare Nao"
+ ac_igawa_asagi:0 "Igawa Asagi"
+ ac_anri_sogahara:0 "Anri Sogahara"
+ ac_rina_komiya:0 "Rina Komiya"
+ ac_anna_komiya:0 "Anna Komiya"
+ ac_yuuki_kawaragi:0 "Yuuki Kawaragi"
+ ac_tsubasa_kamijo:0 "Tsubasa Kamijo"
+ ac_prim_fiorire:0 "Prim Fiorire"
+ ac_cloe:0 "Cloe"
+ ac_claudia_le_van_tyne:0 "Claudia Le Van Tyne"
+ ac_alicia_arcturus:0 "Alicia Arcturus"
+ ac_risa:0 "Risa"
+ ac_kasumi_nanakura:0 "Kasumi Nanakura"
+ ac_kaname:0 "Kaname"
+ ac_suomi:0 "Suomi"
+ ac_akiho_Taniguchi:0 "Akiho Taniguchi"
+ ac_sill_plain:0 "Sill Plain"
+ ac_mika_amano:0 "Mika Amano"
+ ac_asuka_ootorii:0 "Asuka Ootorii"
+ ac_nanoha_takamachi:0 "Nanoha Takamachi"
+ ac_usagi_tsukino:0 "Usagi Tsukino"
+ ac_momo_chiyoda:0 "Momo Chiyoda"
+ ac_hitomi_tsukishiro:0 "Hitomi Tsukishiro"
+ ac_madoka_kaname:0 "Madoka Kaname"
+ ac_illyasviel_von_einzbern:0 "Illyasviel Von Einzbern"
+ ac_arika_yumemiya:0 "Arika Yumemiya"
+ ac_ami_mizuno:0 "Ami Mizuno"
+ ac_makoto_kino:0 "Makoto Kino"
+ ac_minako_aino:0 "Minako Aino"
  ac_rei_hino:0 "Рэй Хино"
  ac_chisato_yonamine:0 "Тисато Ёнаминэ"
  ac_kurumi_mugen:0 "Куруми Мугэн"
