--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -122,126 +122,125 @@
  ac_ami_mizuno:0 "Ami Mizuno"
  ac_makoto_kino:0 "Makoto Kino"
  ac_minako_aino:0 "Minako Aino"
- ac_rei_hino:0 "Рэй Хино"
- ac_chisato_yonamine:0 "Тисато Ёнаминэ"
- ac_kurumi_mugen:0 "Куруми Мугэн"
- ac_homura_akemi:0 "Хомура Акэми"
- ac_subaru_nakajima:0 "Субару Накадзима"
- ac_vivio:0 "Вивио Такамати"
- ac_fate_testarossa:0 "Фейт Тестаросса"
- ac_akane_isshiki:0 "Аканэ Иссики"
- ac_saki_uno:0 "Саки Уно"
- ac_hayato_juumonji:0 "Хаято Джумонджи"
- ac_sakuyo_mikage:0 "Сакуё Микагэ"
- ac_charlotte_dunois:0 "Шарлотта Дюнуа"
- ac_erica_blandelli:0 "Эрика Бланделли"
- ac_miki_hoshii:0 "Мики Хосии"
- ac_irina_jelavic:0 "Ирина Елавич"
- ac_alisa_illinichina_amiella:0 "Алиса Ильинична Амелла"
- ac_kei:0 "Кей"
- ac_kawashima_mizuki:0 "Мидзуки Кавасима"
+ ac_rei_hino:0 "Rei Hino"
+ ac_chisato_yonamine:0 "Chisato Yonamine"
+ ac_kurumi_mugen:0 "Kurumi Mugen"
+ ac_homura_akemi:0 "Homura Akemi"
+ ac_subaru_nakajima:0 "Subaru Nakajima"
+ ac_vivio:0 "Vivio"
+ ac_fate_testarossa:0 "Fate Testarossa"
+ ac_akane_isshiki:0 "Akane Isshiki"
+ ac_saki_uno:0 "Saki Uno"
+ ac_hayato_juumonji:0 "Hayato Juumonji"
+ ac_sakuyo_mikage:0 "Sakuyo Mikage"
+ ac_charlotte_dunois:0 "Charlotte Dunois"
+ ac_erica_blandelli:0 "Erica Blandelli"
+ ac_miki_hoshii:0 "Miki Hoshii"
+ ac_irina_jelavic:0 "Irina Jelavic"
+ ac_alisa_illinichina_amiella:0 "Alisa Illinichina Amiella"
+ ac_kei:0 "Kei"
+ ac_kawashima_mizuki:0 "Kawashima Mizuki"
 #androids
  ac_kos_mos:0 "KOS-MOS"
- ac_fiora_mechon:0 "Фиора"
- ac_mythra:0 "Митра"
- ac_histoire:0 "Истуар"
- ac_alisa_boskonovich:0 "Алиса Босконович"
- ac_risa_android:0 "Риза"
+ ac_fiora_mechon:0 "Fiora"
+ ac_mythra:0 "Mythra"
+ ac_histoire:0 "Histoire"
+ ac_alisa_boskonovich:0 "Alisa Boskonovich"
+ ac_risa_android:0 "Risa"
  ac_2b:0 "2B"
- ac_cibo:0 "Сибо"
+ ac_cibo:0 "Cibo"
  ac_a2:0 "A2"
- ac_edi:0 "Сузи"
- ac_pyra:0 "Пура"
- ac_rozen_s_series:0 "Роза S серия"
- ac_clarion:0 "Кларион"
- ac_maki_ivanova:0 "Маки Иванова"
- ac_pneuma:0 "Пневма"
- ac_hatsune_miku:0 "Мику Хацунэ"
- ac_hana:0 "Хана"
- ac_automaton:0 "Автомат"
- ac_phantom_queen_ex_xecty:0 "Призрачная королева Экс-Ксекты"
- ac_mhmd_02_haruko:0 "MHMD 02 Харуко"
+ ac_edi:0 "EDI"
+ ac_pyra:0 "Pyra"
+ ac_rozen_s_series:0 "Rozen S Series"
+ ac_clarion:0 "Clarion"
+ ac_pneuma:0 "Pneuma"
+ ac_hatsune_miku:0 "Hatsune Miku"
+ ac_hana:0 "Hana"
+ ac_automaton:0 "Automaton"
+ ac_phantom_queen_ex_xecty:0 "Phantom Queen Ex-Xecty"
+ ac_mhmd_02_haruko:0 "MHMD 02 Haruko"
  ac_t_elos:0 "T-Elos"
- ac_aino:0 "Айно"
- ac_rose:0 "Роза"
- ac_elizabeth:0 "Элизабет"
- ac_vivy:0 "Виви"
- ac_ashigara_arp:0 "Ашигара ARP"
- ac_takao_arp:0 "Такао ARP"
- ac_i_410:0 "Иона ARP"
- ac_kongou_arp:0 "Конго ARP"
- ac_atago_arp:0 "Атаго ARP"
- ac_caseal:0 "Касил"
- ac_hiei_arp:0 "Хиэй ARP"
- ac_yurizaki_mira:0 "Мира Юризаки"
- ac_haruna:0 "Харуна"
- ac_kirishima:0 "Киришима"
+ ac_aino:0 "Aino"
+ ac_rose:0 "Rose"
+ ac_elizabeth:0 "Elizabeth"
+ ac_vivy:0 "Vivy"
+ ac_ashigara_arp:0 "Ashigara"
+ ac_takao_arp:0 "Takao"
+ ac_i_410:0 "Iona"
+ ac_kongou_arp:0 "Kongou"
+ ac_atago_arp:0 "Atago"
+ ac_caseal:0 "Caseal"
+ ac_hiei_arp:0 "Hiei"
+ ac_yurizaki_mira:0 "Yurizaki Mira"
+ ac_haruna:0 "Haruna"
+ ac_kirishima:0 "Kirishima"
 
 #monsters
- ac_velvet_crowe:0 "Вельвет Крау"
- ac_yuuko_yoshida:0 "Юко Ёсида"
- ac_maou:0 "Мао"
- ac_holo:0 "Холо"
- ac_fino_bloodstone:0 "Фино Бладстоун"
- ac_rhea:0 "Эрхея"
- ac_shiraori:0 "Шираори"
- ac_ishtar:0 "Иштар"
- ac_lilith:0 "Лилит"
- ac_rose_monster:0 "Роза"
- ac_morrah:0 "Морах"
- ac_ripine:0 "Рипин"
- ac_dullahan:0 "Дюллахан"
- ac_milla_maxwell:0 "Милла Максвелл"
- ac_astaroth:0 "Астарот"
- ac_laharl_female:0 "Лахарл"
- ac_desco:0 "Деско"
- ac_tiamat:0 "Тиамат"
- ac_belldandy:0 "Верданди"
- ac_corrin:0 "Коррин"
- ac_lucy:0 "Люси"
- ac_makina_hoshimura:0 "Макина Хосимура"
- ac_saya_kisaragi:0 "Сая Кисараги"
+ ac_velvet_crowe:0 "Velvet Crowe"
+ ac_yuuko_yoshida:0 "Yuuko Yoshida"
+ ac_maou:0 "Maou"
+ ac_holo:0 "Holo"
+ ac_fino_bloodstone:0 "Fino Bloodstone"
+ ac_rhea:0 "Rhea"
+ ac_shiraori:0 "Shiraori"
+ ac_ishtar:0 "Ishtar"
+ ac_lilith:0 "Lilith"
+ ac_rose_monster:0 "Rose"
+ ac_morrah:0 "Morrah"
+ ac_ripine:0 "Ripine"
+ ac_dullahan:0 "Dullahan"
+ ac_milla_maxwell:0 "Milla Maxwell"
+ ac_astaroth:0 "Astaroth"
+ ac_laharl_female:0 "Laharl"
+ ac_desco:0 "Desco"
+ ac_tiamat:0 "Tiamat"
+ ac_belldandy:0 "Belldandy"
+ ac_corrin:0 "Corrin"
+ ac_lucy:0 "Lucy"
+ ac_makina_hoshimura:0 "Makina Hoshimura"
+ ac_saya_kisaragi:0 "Saya Kisaragi"
  ac_02:0 "02"
- ac_vignette_april_tsukinose:0 "Виньетта Эйприл Цукиносэ"
- ac_satanichia_mcdowell_kurumizawa:0 "Сатаникия МакДауэлл Курумидзава"
- ac_arnice:0 "Арнис"
- ac_saya_otonashi:0 "Сая Отонаси"
- ac_marie_von_eisenberg:0 "Мария Вон Эзенберг"
- ac_kurari_rose:0 "Роза Курари"
- ac_heine:0 "Хайне"
- ac_yamato_wg:0 "Ямато WG"
- ac_purifier:0 "Пурифайер"
- ac_tester:0 "Тестер"
- ac_shigure:0 "Сигурэ"
+ ac_vignette_april_tsukinose:0 "Vignette April Tsukinose"
+ ac_satanichia_mcdowell_kurumizawa:0 "Satanichia Mcdowell Kurumizawa"
+ ac_arnice:0 "Arnice"
+ ac_saya_otonashi:0 "Saya Otonashi"
+ ac_marie_von_eisenberg:0 "Marie Von Eisenberg"
+ ac_kurari_rose:0 "Kurari Rose"
+ ac_heine:0 "Heine"
+ ac_yamato_wg:0 "Yamato WG"
+ ac_purifier:0 "Purifier"
+ ac_tester:0 "Tester"
+ ac_shigure:0 "Shigure"
 #traps
- ac_astolfo:0 "Астольф"
- ac_hideri_kanzaki:0 "Хидэри Кандзаки"
- ac_tetora:0 "Тетора"
- ac_ringo_tsukimiya:0 "Ринго Цукимия"
- ac_felix_argyle:0 "Феликс Аргайл"
- ac_oboro_tsukimigusa:0 "Оборо Цукимигуса"
- ac_hitoshi_sugoroku:0 "Хитоши Сугороку"
- ac_kaoru_hanase:0 "Каору Ханасэ"
- ac_aoi_hyoudou:0 "Аой Хёдо"
- ac_kaguya_arikawa:0 "Кагуя Арикава"
- ac_tama_kyan:0 "Тама Кян"
- ac_hime_arikawa:0 "Химэ Арикава"
- ac_sylvia:0 "Сильвия"
- ac_birdy_cephon_altera:0 "Бёрди Цефон Альтира"
- ac_souji_mitsuka:0 "Содзи Мицука"
- ac_ranga:0 "Ранга"
- ac_yukikaze:0 "Юкикадзэ"
- ac_mitsunaga_oda:0 "Мицунага Ода"
- ac_ritsu_souma:0 "Рицу Сома"
- ac_xianming_lin:0 "Сяньмин Линь"
- ac_mizuho_miyanokouji:0 "Мидзухо Миянокодзи"
- ac_youta_tsunashi:0 "Йота Цунаши"
- ac_fish_eye:0 "Рыбий Глаз"
- ac_hacka_doll_no_3:0 "Цифровая кукла №3"
- ac_ranma_saotome:0 "Ранма Саотомэ"
- ac_hamaji_yakumo:0 "Хамадзи Якумо"
- ac_taroumaru_seike:0 "Сэйкэ"
- ac_mariya_shidou:0 "Мария Сидо"
- ac_russell:0 "Рассел"
- ac_mare_bello_fiore:0 "Маре Белло Фиоре"
- ac_aoi_futaba:0 "Аой Футаба"
+ ac_astolfo:0 "Astolfo"
+ ac_hideri_kanzaki:0 "Hideri Kanzaki"
+ ac_tetora:0 "Tetora"
+ ac_ringo_tsukimiya:0 "Ringo Tsukimiya"
+ ac_felix_argyle:0 "Felix Argyle"
+ ac_oboro_tsukimigusa:0 "Oboro Tsukimigusa"
+ ac_hitoshi_sugoroku:0 "Hitoshi Sugoroku"
+ ac_kaoru_hanase:0 "Kaoru Hanase"
+ ac_aoi_hyoudou:0 "Aoi Hyoudou"
+ ac_kaguya_arikawa:0 "Kaguya Arikawa"
+ ac_tama_kyan:0 "Tama Kyan"
+ ac_hime_arikawa:0 "Hime Arikawa"
+ ac_sylvia:0 "Sylvia"
+ ac_birdy_cephon_altera:0 "Birdy Cephon Altera"
+ ac_souji_mitsuka:0 "Souji Mitsuka"
+ ac_ranga:0 "Ranga"
+ ac_yukikaze:0 "Yukikaze"
+ ac_mitsunaga_oda:0 "Mitsunaga Oda"
+ ac_ritsu_souma:0 "Ritsu Souma"
+ ac_xianming_lin:0 "Xianming Lin"
+ ac_mizuho_miyanokouji:0 "Mizuho Miyanokouji"
+ ac_youta_tsunashi:0 "Youta Tsunashi"
+ ac_fish_eye:0 "Fish Eye"
+ ac_hacka_doll_no_3:0 "Hacka Doll No3"
+ ac_ranma_saotome:0 "Ranma Saotome"
+ ac_hamaji_yakumo:0 "Hamaji Yakumo"
+ ac_taroumaru_seike:0 "Taroumaru Seike"
+ ac_mariya_shidou:0 "Mariya Shidou"
+ ac_russell:0 "Russell"
+ ac_mare_bello_fiore:0 "Mare Bello Fiore"
+ ac_aoi_futaba:0 "Aoi Futaba"
