--- a/localisation/ac_characters_l_russian.yml
+++ b/localisation/ac_characters_l_russian.yml
@@ -1,5 +1,12 @@
 ﻿l_russian:
 #girls
+ ac_charlotte_dunois:0 "Шарлотта Дюнуа"
+ ac_erica_blandelli:0 "Эрика Бланделли"
+ ac_miki_hoshii:0 "Мики Хосии"
+ ac_irina_jelavic:0 "Ирина Елавич"
+ ac_alisa_illinichina_amiella:0 "Алиса Ильинична Амелла"
+ ac_kei:0 "Кей"
+ ac_kawashima_mizuki:0 "Мидзуки Кавасима"
  ac_erza:0 "Эрза Скарлет"
  ac_asuka:0 "Аска Лэнгли Сорью"
  ac_aurora_suya_rhys_kaymin:0 "Аврора Суя Рис Каймин"
@@ -73,146 +80,222 @@
  ac_vert:0 "Вер"
  ac_yukina_himeragi:0 "Юкина Химэраги"
  ac_yuna:0 "Юна"
- ac_yamato_kancol:0 "Ямато КанКол"
- ac_atago_azur_lane:0 "Атаго Лазурный путь"
- ac_avrora_azur_lane:0 "Аврора Лазурный путь"
- ac_belfast:0 "Белфаст Лазурный путь"
- ac_marblehead:0 "Марблхэд Лазурный путь"
- ac_saint_louis_azur_lane:0 "Святой Луиз Лазурный путь"
- ac_takao_azur_lane:0 "Такао Лазурный путь"
- ac_tosa_azur_lane:0 "Тоса Лазурный путь"
- ac_sovetskaya_rossiya:0 "Советская Россия Лазурный путь"
- ac_shima_tateishi:0 "Сима Татэиси"
- ac_akeno_misaki:0 "Акэно Мисаки"
- ac_beidou:0 "Бэйдоу"
- ac_takumi_musashino:0 "Такуми Мусасино"
- ac_saori_asamiya:0 "Саори Асамия"
- ac_mari_setogaya:0 "Мари Сеготая"
- ac_sheliss_elleness_zurbach:0 "Шелис Эленес Зурбах"
- ac_olga_discordia:0 "Ольга Дискордия"
- ac_celestine_lucullus:0 "Селестина Лукулл"
- ac_mistiora_arte:0 "Мистиора Арте"
- ac_iris_arcadia:0 "Ирис Аркадия"
- ac_igawa_asagi:0 "Асаги Игава"
- ac_anri_sogahara:0 "Анри Согахара"
- ac_rina_komiya:0 "Рина Комия"
- ac_anna_komiya:0 "Анна Комия"
- ac_yuuki_kawaragi:0 "Юки Кавараги"
- ac_tsubasa_kamijo:0 "Цубаса Камиджо"
- ac_prim_fiorire:0 "Прим Фиори"
- ac_cloe:0 "Хлоя"
- ac_claudia_le_van_tyne:0 "Клаудия ле Ван Тин"
- ac_alicia_arcturus:0 "Алисия Арктур"
- ac_risa:0 "Риса"
- ac_kasumi_nanakura:0 "Касуми Нанакура"
- ac_kaname:0 "Канамэ"
- ac_suomi:0 "Суоми"
- ac_akiho_Taniguchi:0 "Акихо Танигути"
- ac_sill_plain:0 "Силл Плейн"
- ac_mika_amano:0 "Мика Амано"
- ac_asuka_ootorii:0 "Асука Отории"
- ac_nanoha_takamachi:0 "Наноха Такамати"
- ac_usagi_tsukino:0 "Усаги Цукино"
- ac_momo_chiyoda:0 "Момо Тиёда"
- ac_hitomi_tsukishiro:0 "Хитоми Цукисиро"
- ac_madoka_kaname:0 "Мадока Канамэ"
- ac_illyasviel_von_einzbern:0 "Иллиясфиль фон Айнцберн"
- ac_arika_yumemiya:0 "Арика Юмэмия"
- ac_ami_mizuno:0 "Ами Мизуно"
- ac_makoto_kino:0 "Макото Кино"
- ac_minako_aino:0 "Минако Айно"
- ac_rei_hino:0 "Рэй Хино"
- ac_chisato_yonamine:0 "Тисато Ёнаминэ"
- ac_kurumi_mugen:0 "Куруми Мугэн"
- ac_homura_akemi:0 "Хомура Акэми"
- ac_subaru_nakajima:0 "Субару Накадзима"
- ac_vivio:0 "Вивио Такамати"
- ac_fate_testarossa:0 "Фейт Тестаросса"
- ac_akane_isshiki:0 "Аканэ Иссики"
- ac_saki_uno:0 "Саки Уно"
- ac_hayato_juumonji:0 "Хаято Джумонджи"
- ac_sakuyo_mikage:0 "Сакуё Микагэ"
- ac_charlotte_dunois:0 "Шарлотта Дюнуа"
- ac_erica_blandelli:0 "Эрика Бланделли"
- ac_miki_hoshii:0 "Мики Хосии"
- ac_irina_jelavic:0 "Ирина Елавич"
- ac_alisa_illinichina_amiella:0 "Алиса Ильинична Амелла"
- ac_kei:0 "Кей"
- ac_kawashima_mizuki:0 "Мидзуки Кавасима"
-#androids
- ac_kos_mos:0 "KOS-MOS"
- ac_fiora_mechon:0 "Фиора"
- ac_mythra:0 "Митра"
- ac_histoire:0 "Истуар"
- ac_alisa_boskonovich:0 "Алиса Босконович"
- ac_risa_android:0 "Риза"
- ac_2b:0 "2B"
- ac_cibo:0 "Сибо"
- ac_a2:0 "A2"
- ac_edi:0 "Сузи"
- ac_pyra:0 "Пура"
- ac_rozen_s_series:0 "Роза S серия"
- ac_clarion:0 "Кларион"
- ac_maki_ivanova:0 "Маки Иванова"
- ac_pneuma:0 "Пневма"
- ac_hatsune_miku:0 "Мику Хацунэ"
- ac_hana:0 "Хана"
- ac_automaton:0 "Автомат"
- ac_phantom_queen_ex_xecty:0 "Призрачная королева Экс-Ксекты"
- ac_mhmd_02_haruko:0 "MHMD 02 Харуко"
- ac_t_elos:0 "T-Elos"
- ac_aino:0 "Айно"
- ac_rose:0 "Роза"
- ac_elizabeth:0 "Элизабет"
- ac_vivy:0 "Виви"
- ac_ashigara_arp:0 "Ашигара ARP"
- ac_takao_arp:0 "Такао ARP"
- ac_i_410:0 "Иона ARP"
- ac_kongou_arp:0 "Конго ARP"
- ac_atago_arp:0 "Атаго ARP"
- ac_caseal:0 "Касил"
- ac_hiei_arp:0 "Хиэй ARP"
- ac_yurizaki_mira:0 "Мира Юризаки"
- ac_haruna:0 "Харуна"
- ac_kirishima:0 "Киришима"
+ ac_natasha_cioara:0 "Наташа Чоара"
+ ac_kitagawa_marin:0 "Катигава Марин"
+ ac_snow:0 "Сноу"
+ ac_alicia:0 "Алисия"
+ ac_isht_karin_orte:0 "Ишт Карин Орте"
 
-#monsters
- ac_velvet_crowe:0 "Вельвет Крау"
- ac_yuuko_yoshida:0 "Юко Ёсида"
- ac_maou:0 "Мао"
- ac_holo:0 "Холо"
- ac_fino_bloodstone:0 "Фино Бладстоун"
- ac_rhea:0 "Эрхея"
- ac_shiraori:0 "Шираори"
- ac_ishtar:0 "Иштар"
- ac_lilith:0 "Лилит"
- ac_rose_monster:0 "Роза"
- ac_morrah:0 "Морах"
- ac_ripine:0 "Рипин"
- ac_dullahan:0 "Дюллахан"
- ac_milla_maxwell:0 "Милла Максвелл"
- ac_astaroth:0 "Астарот"
- ac_laharl_female:0 "Лахарл"
- ac_desco:0 "Деско"
- ac_tiamat:0 "Тиамат"
- ac_belldandy:0 "Верданди"
- ac_corrin:0 "Коррин"
- ac_lucy:0 "Люси"
- ac_makina_hoshimura:0 "Макина Хосимура"
- ac_saya_kisaragi:0 "Сая Кисараги"
- ac_02:0 "02"
- ac_vignette_april_tsukinose:0 "Виньетта Эйприл Цукиносэ"
- ac_satanichia_mcdowell_kurumizawa:0 "Сатаникия МакДауэлл Курумидзава"
- ac_arnice:0 "Арнис"
- ac_saya_otonashi:0 "Сая Отонаси"
- ac_marie_von_eisenberg:0 "Мария Вон Эзенберг"
- ac_kurari_rose:0 "Роза Курари"
- ac_heine:0 "Хайне"
- ac_yamato_wg:0 "Ямато WG"
- ac_purifier:0 "Пурифайер"
- ac_tester:0 "Тестер"
- ac_shigure:0 "Сигурэ"
+ #Admirals
+  ac_yamato_kancol:0 "Ямато КанКол"
+  ac_atago_azur_lane:0 "Атаго Лазурный путь"
+  ac_avrora_azur_lane:0 "Аврора Лазурный путь"
+  ac_belfast:0 "Белфаст Лазурный путь"
+  ac_marblehead_azur_lane:0 "Марблхэд Лазурный путь"
+  ac_saint_louis_azur_lane:0 "Святой Луиз Лазурный путь"
+  ac_takao_azur_lane:0 "Такао Лазурный путь"
+  ac_tosa_azur_lane:0 "Тоса Лазурный путь"
+  ac_sovetskaya_rossiya:0 "Советская Россия Лазурный путь"
+  ac_shima_tateishi:0 "Сима Татэиси"
+  ac_akeno_misaki:0 "Акэно Мисаки"
+  ac_beidou:0 "Бэйдоу"
+#HEN
+ #leaders
+  
+  ac_mari_setogaya:0 "Мари Сеготая"
+  ac_sheliss_elleness_zurbach:0 "Шелис Эленес Зурбах"
+  ac_mind_flayer:0 "§RПожиратель разума§!"
+
+ #marshals
+  ac_olga_discordia:0 "Ольга Дискордия"
+  ac_celestine_lucullus:0 "Селестина Лукулл"
+
+ #generals
+  ac_saori_asamiya:0 "Саори Асамия"
+  ac_mistiora_arte:0 "Мистиора Арте"
+  ac_iris_arcadia:0 "Ирис Аркадия"
+  
+  ac_igawa_asagi:0 "Асаги Игава"
+  ac_anri_sogahara:0 "Анри Согахара"
+  ac_rina_komiya:0 "Рина Комия"
+  ac_anna_komiya:0 "Анна Комия"
+  ac_ruma:0 "Рума" 
+  ac_yuuki_kawaragi:0 "Юки Кавараги"
+  ac_tsubasa_kamijo:0 "Цубаса Камиджо"
+  ac_prim_fiorire:0 "Прим Фиори"
+  ac_cloe:0 "Хлоя"
+  ac_claudia_le_van_tyne:0 "Клаудия ле Ван Тин"
+  ac_alicia_arcturus:0 "Алисия Арктур"
+  ac_risa:0 "Риса"
+  ac_kasumi_nanakura:0 "Касуми Нанакура"
+  ac_ai_kagano:0 "Ай Кагано"
+  ac_rin:0 "Рин"
+  ac_alice_erzan:0 "Алиса Эрзан"
+  ac_frey_ringitt:0 "Фрей Ринджитт"
+
+ #admirals
+  ac_kaname:0 "Канамэ"
+  ac_suomi:0 "Суоми"
+  ac_akiho_taniguchi:0 "Акихо Танигути"
+  ac_sill_plain:0 "Силл Плейн"
+ #advisors
+  ac_mika_amano:0 "Мика Амано"
+#MAH
+ #leaders
+  ac_asuka_ootorii:0 "Асука Отории"
+  ac_nanoha_takamachi:0 "Наноха Такамати"
+  ac_usagi_tsukino:0 "Усаги Цукино"
+  ac_momo_chiyoda:0 "Момо Тиёда"
+ #advisors
+  ac_hitomi_tsukishiro:0 "Хитоми Цукисиро"
+  ac_kobato_hanato:0 "Кобато Ханато"
+
+ #marshal
+
+ #generals
+  ac_madoka_kaname:0 "Мадока Канамэ"
+  ac_illyasviel_von_einzbern:0 "Иллиясфиль фон Айнцберн"
+  ac_arika_yumemiya:0 "Арика Юмэмия"
+  ac_ami_mizuno:0 "Ами Мизуно"
+  ac_makoto_kino:0 "Макото Кино"
+  ac_minako_aino:0 "Минако Айно"
+  ac_rei_hino:0 "Рэй Хино"
+  ac_chisato_yonamine:0 "Тисато Ёнаминэ"
+  ac_kurumi_mugen:0 "Куруми Мугэн"
+  ac_homura_akemi:0 "Хомура Акэми"
+  ac_subaru_nakajima:0 "Субару Накадзима"
+  ac_vivio:0 "Вивио Такамати"
+  ac_fate_testarossa:0 "Фейт Тестаросса"
+  ac_saki_uno:0 "Саки Уно"
+  ac_hayato_juumonji:0 "Хаято Джумонджи"
+  ac_frill:0 "Фрилл"
+  ac_mia_cyrus:0 "Миа Сайрус"
+  ac_honey_kisaragi:0 "Хани Кисараги"
+  ac_mai_tokiha:0 "Май Токиха"
+  ac_lena_sayers:0 "Лена Сейерс"
+  ac_maron_kusakabe:0 "Марон Кусакабэ"
+  ac_nagisa_misumi:0 "Нагиса Мисуми"
+  ac_honoka_yukishiro:0 "Хонока Юкисиро"
+  ac_himeno_awayuki:0 "Химэно Аваюки"
+  ac_sakura_kinomoto:0 "Сакура Киномото"
+  ac_mint_aizawa:0 "Минт Айдзава"
+  ac_zakuro_fujiwara:0 "Дзакуро Фудзивара"
+  ac_komugi_yoshida:0 "Комуги Йошида"
+  ac_amanogawa_kirara:0 "Кирара Аманогава"
+  ac_ichinose_minori:0 "Минори Итиносэ"
+  ac_laura_la_mer:0 "Лаура"
+  ac_momozono_love:0 "Лав Момозоно"
+  ac_natsuumi_manatsu:0 "Манацу Нацуми"
+  ac_shiratori_yuriko:0 "Юрико Сиратори"
+  ac_takizawa_asuka:0 "Асука Такидзава"
+
+ #admirals
+  ac_sakuyo_mikage:0 "Сакуё Микагэ"
+  ac_akane_isshiki:0 "Аканэ Иссики"
+  ac_utena_tenjou:0 "Утэна Тэндзё"
+  ac_lucia_nanami:0 "Лючия Нанами"
+#MEH
+ #lider
+  ac_kos-mos:0 "KOS-MOS"
+  ac_fiora_mechon:0 "Фиора Мехон"
+  ac_mythra:0 "Митра"
+  ac_histoire:0 "Истуар"
+
+ #marshal
+  ac_iris_heart:0 "Пурпурное Сердце"
+ #generals
+  ac_alisa_boskonovich:0 "Алиса Босконович"
+  ac_risa_android:0 "Риза"
+  ac_2b:0 "2B"
+  ac_cibo:0 "Сибо"
+  ac_a2:0 "A2"
+  ac_svetlana_sakura:0 "Светлана Сакура"
+  ac_alexandra_frolova:0 "Александра Фролова"
+  ac_edi:0 "Сузи"
+  ac_pyra:0 "Пура"
+  ac_rozen_s_series:0 "Роза S серия"
+  ac_clarion:0 "Кларион"
+  ac_maki_ivanova:0 "Маки Иванова"
+  ac_pneuma:0 "Пневма"
+  ac_hatsune_miku:0 "Мику Хацунэ"
+  ac_hana:0 "Хана"
+  ac_automaton:0 "Автомат"
+  ac_phantom_queen_ex-xecty:0 "Призрачная королева Экс-Ксекты"
+  ac_mhmd-02_haruko:0 "MHMD 02 Харуко"
+  ac_t-elos:0 "T-Elos"
+  ac_aino:0 "Айно"
+  ac_rose_android:0 "Роза Андроид"
+  ac_elizabeth:0 "Элизабет"
+  ac_vivy:0 "Виви"
+  ac_norimaki_arale:0 "Арале Норимаки"
+
+ #admiral
+  ac_ashigara_arp:0 "Ашигара ARP"
+  ac_takao_arp:0 "Такао ARP"
+  ac_i-410:0 "Иона ARP"
+  ac_haruna:0 "Харуна ARP"
+  ac_kirishima:0 "Киришима ARP"
+  ac_kongou_arp:0 "Конго ARP"
+  ac_atago_arp:0 "Атаго ARP"
+  ac_caseal:0 "Касил"
+  ac_hiei_arp:0 "Хиэй ARP"
+ #advisor
+  ac_yurizaki_mira:0 "Мира Юризаки"
+#MMS
+ #lider
+  ac_velvet_crowe:0 "Вельвет Крау"
+  ac_yuuko_yoshida:0 "Юко Ёсида"
+  ac_maou:0 "Мао"
+  ac_holo:0 "Холо"
+ #marshal
+  ac_fino_bloodstone:0 "Фино Бладстоун"
+  ac_rhea:0 "Эрхея"
+  ac_shiraori:0 "Шираори"
+  ac_ishtar:0 "Иштар"
+
+ #generals
+  ac_lilith:0 "Лилит"
+  ac_rose:0 "Роза"
+  ac_morrah:0 "Морах"
+  ac_ripine:0 "Рипин"
+  ac_dullahan:0 "Дюллахан"
+  ac_milla_maxwell:0 "Милла Максвелл"
+  ac_astaroth:0 "Астарот"
+  ac_laharl_girl:0 "Лахарл"
+  ac_desco:0 "Деско"
+  ac_tiamat:0 "Тиамат"
+  ac_belldandy:0 "Верданди"
+  ac_corrin:0 "Коррин"
+  ac_lucy:0 "Люси"
+  ac_makina_hoshimura:0 "Макина Хосимура"
+  ac_saya_kisaragi:0 "Сая Кисараги"
+  ac_zero_two:0 "02"
+  ac_vignette_april_tsukinose:0 "Виньетта Эйприл Цукиносэ"
+  ac_satanichia_mcdowell_kurumizawa:0 "Сатаникия МакДауэлл Курумидзава"
+  ac_arnice:0 "Арнис"
+  ac_saya_otonashi:0 "Сая Отонаси"
+  ac_marie_von_eisenberg:0 "Мария Вон Эзенберг"
+  ac_kurari_rose:0 "Роза Курари"
+  ac_heine:0 "Хайне"
+  ac_freyja:0 "Фрея"
+  ac_saphentite_neikes:0 "Сафентит Нейкс"
+  ac_miia:0 "Мия"
+  ac_asmodeus:0 "Асмодеус"
+ #Admirals
+  ac_yamato_wg:0 "Ямато WG"
+  ac_purifier:0 "Пурифайер"
+  ac_tester:0 "Тестер"
+  ac_meroune_lorelei:0 "Мероуна Лорелей"
+ #advisors
+  ac_shigure:0 "Сигурэ"
+ ac_prinz_eugen:0 "Принц Ойген"
+ ac_lilia_eberwein:0 "Лилия Эвельвайн"
+ ac_catue_dragundaala:0 "Катюа Драгундала"
+ ac_violet_evergarden:0 "Вайолет Эвергарден"
+
 #traps
+ ac_homare_nao:0 "Хомаре Нао"
+ ac_takumi_musashino:0 "Такуми Мусасино"
  ac_astolfo:0 "Астольф"
  ac_hideri_kanzaki:0 "Хидэри Кандзаки"
  ac_tetora:0 "Тетора"
@@ -236,7 +319,10 @@
  ac_mizuho_miyanokouji:0 "Мидзухо Миянокодзи"
  ac_youta_tsunashi:0 "Йота Цунаши"
  ac_fish_eye:0 "Рыбий Глаз"
- ac_hacka_doll_no_3:0 "Цифровая кукла №3"
+ ac_hacka_doll_3:0 "Цифровая кукла 3"
+ ac_shirota_mitsuki:0 "Широта Митсуки"
+ ac_tiger_traps:0 "Тайгер Трапс"
+ ac_jun_hiiragi:0 "Джун Хираги"
  ac_ranma_saotome:0 "Ранма Саотомэ"
  ac_hamaji_yakumo:0 "Хамадзи Якумо"
  ac_taroumaru_seike:0 "Сэйкэ"
@@ -244,4 +330,3 @@
  ac_russell:0 "Рассел"
  ac_mare_bello_fiore:0 "Маре Белло Фиоре"
  ac_aoi_futaba:0 "Аой Футаба"
- ac_homare_nao:0 "Хомаре Нао"
