--- a/localisation/ac_traits_l_english.yml
+++ b/localisation/ac_traits_l_english.yml
@@ -1,6 +1,5 @@
 ﻿l_english:
-ac_girl_scientist:0 "Scientist"
-ac_infrastructure_developer:0 "Infrastructure Builder"
+#traits
 ac_idol:0 "Idol"
 ac_patron_of_intelligence:0 "Patron saint of intelligence"
 ac_tsundere:0 "Tsundere"
@@ -11,25 +10,40 @@ ac_android:0 "Android"
 ac_patron_of_science:0 "Patron saint of science"
 ac_superweapon:0 "Super weapon"
 ac_empress:0 "The Empress"
+ac_popular_figurehead:0 "§BPopular figurehead§!"
+ac_intelligence_princess:0 "Spy Princess"
+ac_silent_workhorse:0 "Workhorse"
+ac_nuclear_mazoku:0 "Atomic Mazoku"
+ac_girl_scientist:0 "Girl scientist"
+ac_propaganda_expert:0 "Propoganda expert"
+ac_first_lady:0 "First lady"
+ac_naval_base_engineer:0 "Naval base builder"
+ac_infrastructure_developer:0 "Transport Minister"
+ac_captain_of_industry:0 "Minister of Invention"
+ac_war_industrialist:0 "Military tycoon"
+ac_submarine_manufacturer:0 "Submarine developer"
+ac_carrier_manufacturer:0 "Aircraft Carrier Developer"
+ac_battlefleet_designer:0 "Surface warship developer"
 ac_anime_tyan:0 "Anime girl"
 ac_trap:0 "Trap"
+ac_atom_concern_trait:0 "Atomic concern"
 ac_tyan_militarist:0 "§YMilitarist§!"
 ac_defender:0 "Defender"
 ac_revolutionary:0 "§RRevolutionary§!"
 ac_peoples_favorite:0 "§BFavorite of the people§!"
-ac_nuclear_scientist:0 "Nuclear Scientist"
-ac_popular_figurehead:0 "Popular Figurehead"
-ac_silent_workhorse:0 "Silent Workhorse"
-ac_head_of_intelligence:0 "Head of Intelligence"
-ac_propaganda_expert:0 "Propaganda Expert"
-ac_first_lady:0 "First Lady"
-ac_quartermaster_general:0 "Quartermaster General"
-ac_captain_of_industry:0 "Captain of industry"
-ac_war_industrialist:0 "War Industrialist"
-ac_princess_of_terror:0 "Princess of Terror"
+ac_jack_of_all_trades_trait:0 "Jack of all trades"
+ac_minister_of_health:0 "Minister of Health"
+ac_peoples_favorite_minister:0 "§BPeoples Favorite§!"
+ac_demon_lord:0 "§RDemon Lord§!"
 ac_communist_revolutionary:0 "Communist Revolutionary"
 ac_democratic_reformer:0 "Democratic Reformer"
 ac_fascist_demagogue:0 "Fascist Demagogue"
 ac_staunch_monarchist:0 "Staunch Monarchist"
+ac_princess_of_terror:0 "§RPrincess of Terror§!"
+
+#unut leader traits
+ ac_exp_trait:0 "High learning ability"
+ ac_exp_navy_trait:0 "High learning ability"
+
 
 
