--- a/localisation/ac_traits_l_russian.yml
+++ b/localisation/ac_traits_l_russian.yml
@@ -1,33 +1,46 @@
 ﻿l_russian:
-ac_girl_scientist:0 "Учёная"
-ac_infrastructure_developer:0 "Строитель инфраструктуры"
-ac_idol:0 "Идол"
-ac_patron_of_intelligence:0 "Покровитель разведки"
-ac_tsundere:0 "Цундере"
-ac_patron_of_the_military_industrial_complex:0 "Покровитель ВПК"
-ac_dictator:0 "Диктатор"
-ac_patron_of_industry:0 "Покровитель индустрии"
-ac_android:0 "Андроид"
-ac_patron_of_science:0 "Покровитель науки"
+#traits
+ ac_idol:0 "Идол"
+ ac_patron_of_intelligence:0 "Покровитель разведки"
+ ac_tsundere:0 "Цундере"
+ ac_patron_of_the_military_industrial_complex:0 "Покровитель ВПК"
+ ac_dictator:0 "Диктатор"
+ ac_patron_of_industry:0 "Покровитель индустрии"
+ ac_android:0 "Андроид"
+ ac_patron_of_science:0 "Покровитель науки"
 ac_superweapon:0 "Супер оружие"
 ac_empress:0 "Императрица"
+ac_popular_figurehead:0 "§BПопулярная§!"
+ac_intelligence_princess:0 "Принцесса-шпионка"
+ac_silent_workhorse:0 "Рабочая лошадка"
+ac_nuclear_mazoku:0 "Атомный мазоку"
+ac_girl_scientist:0 "Девушка учёный"
+ac_propaganda_expert:0 "Эксперт по пропоганде"
+ac_first_lady:0 "Первая леди"
+ac_naval_base_engineer:0 "Строитель военно морских баз"
+ac_infrastructure_developer:0 "Министр транспорта"
+ac_captain_of_industry:0 "Министр примышленности"
+ac_war_industrialist:0 "Военный магнат"
+ac_submarine_manufacturer:0 "Разработчик подводных лодок"
+ac_carrier_manufacturer:0 "Разработчик Авианосцев"
+ac_battlefleet_designer:0 "Разработчик надводных боевых кораблей"
 ac_anime_tyan:0 "Тян"
 ac_trap:0 "Трап"
+ac_atom_concern_trait:0 "Атомный концерн"
 ac_tyan_militarist:0 "§YМилитаристка§!"
 ac_defender:0 "Оборонец"
 ac_revolutionary:0 "§RРеволюционер§!"
 ac_peoples_favorite:0 "§BЛюбимеца народа§!"
-ac_nuclear_scientist:0 "Физик ядерщик"
-ac_popular_figurehead:0 "Популярная"
-ac_silent_workhorse:0 "Рабочия лошадка"
-ac_head_of_intelligence:0 "Начальник разведки"
-ac_propaganda_expert:0 "Пропагондист"
-ac_first_lady:0 "Первая леди"
-ac_quartermaster_general:0 "Генерал кватермейстер"
-ac_captain_of_industry:0 "Капитан индустрии"
-ac_war_industrialist:0 "Военный магнат"
-ac_princess_of_terror:0 "Принцеса террора"
-ac_communist_revolutionary:0 "Комунист революционер"
+ac_jack_of_all_trades_trait:0 "Мастерская на все руки"
+ac_minister_of_health:0 "Министр здравоохранения"
+ac_peoples_favorite_minister:0 "§BЛюбимеца народа§!"
+ac_demon_lord:0 "§RВладыка демонов§!"
+ac_communist_revolutionary:0 "Коммунист революционер"
 ac_democratic_reformer:0 "Демократ реформатор"
 ac_fascist_demagogue:0 "Фашист демагог"
 ac_staunch_monarchist:0 "Монархист"
+ac_princess_of_terror:0 "§RПринцесса террора§!"
+
+#unut leader traits
+ ac_exp_trait:0 "Высокая обучаемость"
+ ac_exp_navy_trait:0 "Высокая обучаемость"
