--- a/localisation/ac_characters_l_english.yml
+++ b/localisation/ac_characters_l_english.yml
@@ -1,138 +1,5 @@
 ﻿l_english:
-#girls
- ac_erza:0 "Erza Scarlet"
- ac_asuka:0 "Asuka Langley Souryuu"
- ac_aurora_suya_rhys_kaymin:0 "Aurora Suya Rhys Kaymin"
- ac_anastasia:0 "Anastasia"
- ac_minami_nitta:0 "Minami Nitta"
- ac_noelle:0 "Noelle"
- ac_eruza_guranhirute:0 "Eruza Guranhirute"
- ac_ange_le_carre:0 "Ange le Carré"
- ac_niko_yazawa:0 "Niko Yazawa"
- ac_mikumo_guynemer:0 "Mikumo Guynemer"
- ac_asuka_tanaka:0 "Asuka Tanaka"
- ac_lucy_yamagami:0 "Lucy Yamagami"
- ac_aoi_sakurai:0 "Aoi Sakurai"
- ac_megumin:0 "Megumin"
- ac_ayame_himuro:0 "Ayame Himuro"
- ac_lightning:0 "Lightning"
- ac_mamako_oosuki:0 "Mamako Oosuki"
- ac_anastasia_romanova:0 "Anastasia Romanova"
- ac_saint_martha:0 "Saint Martha"
- ac_nishizumi_miho:0 "Nishizumi Miho"
- ac_asuna_yuuki:0 "Asuna Yuuki"
- ac_mash_kyrielight:0 "Mash Kyrielight"
- ac_maple:0 "Maple"
- ac_yoko_littner:0 "Yoko Littner"
- ac_kallen_stadtfeld:0 "Kallen Stadtfeld"
- ac_saki_rukino:0 "Saki Rukino"
- ac_kurumi_tokisaki:0 "Kurumi Tokisaki"
- ac_sanya_v_litvyak:0 "Sanya V. Litvyak"
- ac_isuzu_sento:0 "Isuzu Sento"
- ac_volemia:0 "Volemia"
- ac_camilla:0 "Camilla"
- ac_sinon:0 "Sinon"
- ac_kaname_chidori:0 "Kaname Chidori"
- ac_yoshiko_tsushima:0 "Yoshiko Tsushima"
- ac_ranko_kanzaki:0 "Ranko Kanzaki"
- ac_elma:0 "Elma"
- ac_ako_tamaki:0 "Ako Tamaki"
- ac_celica:0 "Celica"
- ac_cryska_barchenowa:0 "Cryska Barchenowa"
- ac_fiora:0 "Fiora"
- ac_haruhi_suzumiya:0 "Haruhi Suzumiya"
- ac_kiana_kaslana:0 "Kiana Kaslana"
- ac_konoko:0 "Konoko"
- ac_lina_inverse:0 "Lina Inverse"
- ac_neptune:0 "Neptune"
- ac_ryuuko_matoi:0 "Ryuuko Matoi"
- ac_satellizer_el_bridget:0 "Satellizer El Bridget"
- ac_siluca_meletes:0 "Siluca Meletes"
- ac_yuno_gasai:0 "Yuno Gasai"
- ac_byleth_eisner:0 "Byleth Eisner"
- ac_eula:0 "Eula"
- ac_5pb:0 "5pb"
- ac_blanc:0 "Blanc"
- ac_compa:0 "Compa"
- ac_djeeta:0 "Djeeta"
- ac_ellis:0 "Ellis"
- ac_escha_malier:0 "Escha Malier"
- ac_fujimaru_ritsuka:0 "Fujimaru Ritsuka"
- ac_honoka_kousaka:0 "Honoka Kousaka"
- ac_if:0 "IF"
- ac_kasumi:0 "Kasumi"
- ac_merurulince_rede_arls:0 "Merurulince Rede Arls"
- ac_miho_nishizumi:0 "Miho Nishizumi"
- ac_misato_katsuragi:0 "Misato Katsuragi"
- ac_naru_narusegawa:0 "Naru Narusegawa"
- ac_noire:0 "Noire"
- ac_rei_ayanami:0 "Rei Ayanami"
- ac_ryza:0 "Ryza"
- ac_selesia_upitiria:0 "Selesia Upitiria"
- ac_sophie_neuenmuller:0 "Sophie Neuenmuller"
- ac_vert:0 "Vert"
- ac_yukina_himeragi:0 "Yukina Himeragi"
- ac_yuna:0 "Yuna"
- ac_yamato_kancol:0 "Yamato"
- ac_atago_azur_lane:0 "Atago"
- ac_avrora_azur_lane:0 "Avrora"
- ac_belfast:0 "Belfast"
- ac_marblehead:0 "Marblehead"
- ac_saint_louis_azur_lane:0 "Saint Louis"
- ac_takao_azur_lane:0 "Takao"
- ac_tosa_azur_lane:0 "Tosa"
- ac_sovetskaya_rossiya:0 "Sovetskaya Rossiya"
- ac_shima_tateishi:0 "Shima Tateishi"
- ac_akeno_misaki:0 "Akeno Misaki"
- ac_beidou:0 "Beidou"
- ac_takumi_musashino:0 "Takumi Musashino"
- ac_saori_asamiya:0 "Saori Asamiya"
- ac_mari_setogaya:0 "Mari Setogaya"
- ac_sheliss_elleness_zurbach:0 "Sheliss Elleness Zurbach"
- ac_olga_discordia:0 "Olga Discordia"
- ac_celestine_lucullus:0 "Celestine Lucullus"
- ac_mistiora_arte:0 "Mistiora Arte"
- ac_iris_arcadia:0 "Iris Arcadia"
- ac_homare_nao:0 "Homare Nao"
- ac_igawa_asagi:0 "Igawa Asagi"
- ac_anri_sogahara:0 "Anri Sogahara"
- ac_rina_komiya:0 "Rina Komiya"
- ac_anna_komiya:0 "Anna Komiya"
- ac_yuuki_kawaragi:0 "Yuuki Kawaragi"
- ac_tsubasa_kamijo:0 "Tsubasa Kamijo"
- ac_prim_fiorire:0 "Prim Fiorire"
- ac_cloe:0 "Cloe"
- ac_claudia_le_van_tyne:0 "Claudia Le Van Tyne"
- ac_alicia_arcturus:0 "Alicia Arcturus"
- ac_risa:0 "Risa"
- ac_kasumi_nanakura:0 "Kasumi Nanakura"
- ac_kaname:0 "Kaname"
- ac_suomi:0 "Suomi"
- ac_akiho_Taniguchi:0 "Akiho Taniguchi"
- ac_sill_plain:0 "Sill Plain"
- ac_mika_amano:0 "Mika Amano"
- ac_asuka_ootorii:0 "Asuka Ootorii"
- ac_nanoha_takamachi:0 "Nanoha Takamachi"
- ac_usagi_tsukino:0 "Usagi Tsukino"
- ac_momo_chiyoda:0 "Momo Chiyoda"
- ac_hitomi_tsukishiro:0 "Hitomi Tsukishiro"
- ac_madoka_kaname:0 "Madoka Kaname"
- ac_illyasviel_von_einzbern:0 "Illyasviel Von Einzbern"
- ac_arika_yumemiya:0 "Arika Yumemiya"
- ac_ami_mizuno:0 "Ami Mizuno"
- ac_makoto_kino:0 "Makoto Kino"
- ac_minako_aino:0 "Minako Aino"
- ac_rei_hino:0 "Rei Hino"
- ac_chisato_yonamine:0 "Chisato Yonamine"
- ac_kurumi_mugen:0 "Kurumi Mugen"
- ac_homura_akemi:0 "Homura Akemi"
- ac_subaru_nakajima:0 "Subaru Nakajima"
- ac_vivio:0 "Vivio"
- ac_fate_testarossa:0 "Fate Testarossa"
- ac_akane_isshiki:0 "Akane Isshiki"
- ac_saki_uno:0 "Saki Uno"
- ac_hayato_juumonji:0 "Hayato Juumonji"
- ac_sakuyo_mikage:0 "Sakuyo Mikage"
+#ACW
  ac_charlotte_dunois:0 "Charlotte Dunois"
  ac_erica_blandelli:0 "Erica Blandelli"
  ac_miki_hoshii:0 "Miki Hoshii"
@@ -140,107 +7,337 @@
  ac_alisa_illinichina_amiella:0 "Alisa Illinichina Amiella"
  ac_kei:0 "Kei"
  ac_kawashima_mizuki:0 "Kawashima Mizuki"
-#androids
- ac_kos_mos:0 "KOS-MOS"
- ac_fiora_mechon:0 "Fiora"
- ac_mythra:0 "Mythra"
- ac_histoire:0 "Histoire"
- ac_alisa_boskonovich:0 "Alisa Boskonovich"
- ac_risa_android:0 "Risa"
- ac_2b:0 "2B"
- ac_cibo:0 "Cibo"
- ac_a2:0 "A2"
- ac_edi:0 "EDI"
- ac_pyra:0 "Pyra"
- ac_rozen_s_series:0 "Rozen S Series"
- ac_clarion:0 "Clarion"
- ac_pneuma:0 "Pneuma"
- ac_hatsune_miku:0 "Hatsune Miku"
- ac_hana:0 "Hana"
- ac_automaton:0 "Automaton"
- ac_phantom_queen_ex_xecty:0 "Phantom Queen Ex-Xecty"
- ac_mhmd_02_haruko:0 "MHMD 02 Haruko"
- ac_t_elos:0 "T-Elos"
- ac_aino:0 "Aino"
- ac_rose:0 "Rose"
- ac_elizabeth:0 "Elizabeth"
- ac_vivy:0 "Vivy"
- ac_ashigara_arp:0 "Ashigara"
- ac_takao_arp:0 "Takao"
- ac_i_410:0 "Iona"
- ac_kongou_arp:0 "Kongou"
- ac_atago_arp:0 "Atago"
- ac_caseal:0 "Caseal"
- ac_hiei_arp:0 "Hiei"
- ac_yurizaki_mira:0 "Yurizaki Mira"
- ac_haruna:0 "Haruna"
- ac_kirishima:0 "Kirishima"
+ #leaders
+  ac_erza:0 "Erza"
+  ac_asuka:0 "Asuka"
+  ac_aurora_suya_rhys_kaymin:0 "Aurora Suya Rhys Kaymin"
+  ac_anastasia:0 "Anastasia"
 
-#monsters
- ac_velvet_crowe:0 "Velvet Crowe"
- ac_yuuko_yoshida:0 "Yuuko Yoshida"
- ac_maou:0 "Maou"
- ac_holo:0 "Holo"
- ac_fino_bloodstone:0 "Fino Bloodstone"
- ac_rhea:0 "Rhea"
- ac_shiraori:0 "Shiraori"
- ac_ishtar:0 "Ishtar"
- ac_lilith:0 "Lilith"
- ac_rose_monster:0 "Rose"
- ac_morrah:0 "Morrah"
- ac_ripine:0 "Ripine"
- ac_dullahan:0 "Dullahan"
- ac_milla_maxwell:0 "Milla Maxwell"
- ac_astaroth:0 "Astaroth"
- ac_laharl_female:0 "Laharl"
- ac_desco:0 "Desco"
- ac_tiamat:0 "Tiamat"
- ac_belldandy:0 "Belldandy"
- ac_corrin:0 "Corrin"
- ac_lucy:0 "Lucy"
- ac_makina_hoshimura:0 "Makina Hoshimura"
- ac_saya_kisaragi:0 "Saya Kisaragi"
- ac_02:0 "02"
- ac_vignette_april_tsukinose:0 "Vignette April Tsukinose"
- ac_satanichia_mcdowell_kurumizawa:0 "Satanichia Mcdowell Kurumizawa"
- ac_arnice:0 "Arnice"
- ac_saya_otonashi:0 "Saya Otonashi"
- ac_marie_von_eisenberg:0 "Marie Von Eisenberg"
- ac_kurari_rose:0 "Kurari Rose"
- ac_heine:0 "Heine"
- ac_yamato_wg:0 "Yamato WG"
- ac_purifier:0 "Purifier"
- ac_tester:0 "Tester"
- ac_shigure:0 "Shigure"
-#traps
- ac_astolfo:0 "Astolfo"
- ac_hideri_kanzaki:0 "Hideri Kanzaki"
- ac_tetora:0 "Tetora"
- ac_ringo_tsukimiya:0 "Ringo Tsukimiya"
- ac_felix_argyle:0 "Felix Argyle"
- ac_oboro_tsukimigusa:0 "Oboro Tsukimigusa"
- ac_hitoshi_sugoroku:0 "Hitoshi Sugoroku"
- ac_kaoru_hanase:0 "Kaoru Hanase"
- ac_aoi_hyoudou:0 "Aoi Hyoudou"
- ac_kaguya_arikawa:0 "Kaguya Arikawa"
- ac_tama_kyan:0 "Tama Kyan"
- ac_hime_arikawa:0 "Hime Arikawa"
- ac_sylvia:0 "Sylvia"
- ac_birdy_cephon_altera:0 "Birdy Cephon Altera"
- ac_souji_mitsuka:0 "Souji Mitsuka"
- ac_ranga:0 "Ranga"
- ac_yukikaze:0 "Yukikaze"
- ac_mitsunaga_oda:0 "Mitsunaga Oda"
- ac_ritsu_souma:0 "Ritsu Souma"
- ac_xianming_lin:0 "Xianming Lin"
- ac_mizuho_miyanokouji:0 "Mizuho Miyanokouji"
- ac_youta_tsunashi:0 "Youta Tsunashi"
- ac_fish_eye:0 "Fish Eye"
- ac_hacka_doll_no_3:0 "Hacka Doll No3"
- ac_ranma_saotome:0 "Ranma Saotome"
- ac_hamaji_yakumo:0 "Hamaji Yakumo"
- ac_taroumaru_seike:0 "Taroumaru Seike"
- ac_mariya_shidou:0 "Mariya Shidou"
- ac_russell:0 "Russell"
- ac_mare_bello_fiore:0 "Mare Bello Fiore"
- ac_aoi_futaba:0 "Aoi Futaba"
+ #advisors
+  ac_minami_nitta:0 "Minami Nitta"
+  ac_noelle:0 "Noelle"
+  ac_eruza_guranhirute:0 "Eruza Guranhirute"
+  ac_ange_le_carre:0 "Ange le Carre"
+  ac_niko_yazawa:0 "Niko Yazawa"
+  ac_mikumo_guynemer:0 "Mikumo Guynemer"
+  ac_asuka_tanaka:0 "Asuka Tanaka"
+  ac_lucy_yamagami:0 "Lucy Yamagami"
+  ac_aoi_sakurai:0 "Aoi Sakurai"
+  ac_megumin:0 "Megumin"
+  ac_ayame_himuro:0 "Ayame Himuro"
+
+ #marshal
+  ac_lightning:0 "Lightning"
+  ac_mamako_oosuki:0 "Mamako Oosuki"
+ #generals
+  ac_anastasia_romanova:0 "Anastasia Romanova"
+  ac_saint_martha:0 "Saint Martha"
+  ac_nishizumi_miho:0 "Nishizumi Miho"
+  ac_asuna_yuuki:0 "Asuna Yuuki"
+  ac_mash_kyrielight:0 "Mash Kyrielight"
+  ac_maple:0 "Maple"
+  ac_yoko_littner:0 "Yoko Littner"
+  ac_kallen_stadtfeld:0 "Kallen Stadtfeld"
+  ac_saki_rukino:0 "Saki Rukino"
+  ac_kurumi_tokisaki:0 "Kurumi Tokisaki"
+  ac_sanya_v_litvyak:0 "Sanya V. Litvyak"
+  ac_isuzu_sento:0 "Isuzu Sento"
+  ac_volemia:0 "Volemia"
+  ac_camilla:0 "Camilla"
+  ac_sinon:0 "Sinon"
+  ac_kaname_chidori:0 "Kaname Chidori"
+  ac_yoshiko_tsushima:0 "Yoshiko Tsushima"
+  ac_ranko_kanzaki:0 "Ranko Kanzaki"
+  ac_elma:0 "Elma"
+  ac_ako_tamaki:0 "Ako Tamaki"
+  ac_celica:0 "Celica"
+  ac_cryska_barchenowa:0 "Cryska Barchenowa"
+  ac_fiora:0 "Fiora"
+  ac_haruhi_suzumiya:0 "Haruhi Suzumiya"
+  ac_kiana_kaslana:0 "Kiana Kaslana"
+  ac_konoko:0 "Konoko"
+  ac_lina_inverse:0 "Lina Inverse"
+  ac_neptune:0 "Neptune"
+  ac_ryuuko_matoi:0 "Ryuuko Matoi"
+  ac_satellizer_el_bridget:0 "Satellizer el Bridget"
+  ac_siluca_meletes:0 "Siluca Meletes"
+  ac_yuno_gasai:0 "Yuno Gasai"
+  ac_byleth_eisner:0 "Byleth Eisner"
+  ac_eula:0 "Eula"
+  ac_5pb:0 "5pb"
+  ac_blanc:0 "Blanc"
+  ac_compa:0 "Compa"
+  ac_djeeta:0 "Djeeta"
+  ac_ellis:0 "Ellis"
+  ac_escha_malier:0 "Escha Malier"
+  ac_fujimaru_ritsuka:0 "Fujimaru Ritsuka"
+  ac_honoka_kousaka:0 "Honoka Kousaka"
+  ac_if:0 "IF"
+  ac_kasumi:0 "Kasumi"
+  ac_merurulince_rede_arls:0 "Merurulince Rede Arls"
+  ac_miho_nishizumi:0 "Miho Nishizumi"
+  ac_misato_katsuragi:0 "Misato Katsuragi"
+  ac_naru_narusegawa:0 "Naru Narusegawa"
+  ac_noire:0 "Noire"
+  ac_rei_ayanami:0 "Rei Ayanami"
+  ac_ryza:0 "Ryza"
+  ac_selesia_upitiria:0 "Selesia Upitiria"
+  ac_sophie_neuenmuller:0 "Sophie Neuenmuller"
+  ac_vert:0 "Vert"
+  ac_yukina_himeragi:0 "Yukina Himeragi"
+  ac_yuna:0 "Yuna"
+  ac_natasha_cioara:0 "Natasha Cioară"
+  ac_kitagawa_marin:0 "Kitagawa Marin"
+  ac_snow:0 "Snow"
+  ac_alicia:0 "Alicia"
+  ac_isht_karin_orte:0 "Isht Karin Orte"
+
+ #Admirals
+  ac_yamato_kancol:0 "Yamato Kancol"
+  ac_atago_azur_lane:0 "Atago Azur Lane"
+  ac_avrora_azur_lane:0 "Avrora Azur Lane"
+  ac_belfast:0 "Belfast Azur Lane"
+  ac_marblehead_azur_lane:0 "Marblehead Azur Lane"
+  ac_saint_louis_azur_lane:0 "Saint Louis Azur Lane"
+  ac_takao_azur_lane:0 "Takao Azur Lane"
+  ac_tosa_azur_lane:0 "Tosa Azur Lane"
+  ac_sovetskaya_rossiya:0 "Sovetskaya Rossiya Azur Lane"
+  ac_shima_tateishi:0 "Shima Tateishi"
+  ac_akeno_misaki:0 "Akeno Misaki"
+  ac_beidou:0 "Beidou"
+#HEN
+ #leaders
+  
+  ac_mari_setogaya:0 "Mari Setogaya"
+  ac_sheliss_elleness_zurbach:0 "Sheliss Elleness Zurbach"
+  ac_mind_flayer:0 "§RMind Flayer§!"
+
+ #marshals
+  ac_olga_discordia:0 "Olga Discordia"
+  ac_celestine_lucullus:0 "Celestine Lucullus"
+
+ #generals
+  ac_saori_asamiya:0 "Saori Asamiya"
+  ac_mistiora_arte:0 "Mistiora Arte"
+  ac_iris_arcadia:0 "Iris Arcadia"
+  
+  ac_igawa_asagi:0 "Igawa Asagi"
+  ac_anri_sogahara:0 "Anri Sogahara"
+  ac_rina_komiya:0 "Rina Komiya"
+  ac_anna_komiya:0 "Anna Komiya"
+  ac_ruma:0 "Ruma" 
+  ac_yuuki_kawaragi:0 "Yuuki Kawaragi"
+  ac_tsubasa_kamijo:0 "Tsubasa Kamijo"
+  ac_prim_fiorire:0 "Prim Fiorire"
+  ac_cloe:0 "Cloe"
+  ac_claudia_le_van_tyne:0 "Claudia le Van Tyne"
+  ac_alicia_arcturus:0 "Alicia Arcturus"
+  ac_risa:0 "Risa"
+  ac_kasumi_nanakura:0 "Kasumi Nanakura"
+  ac_ai_kagano:0 "Ai Kagano"
+  ac_rin:0 "Rin"
+  ac_alice_erzan:0 "Alice Erzan"
+  ac_frey_ringitt:0 "Frey Ringitt"
+
+ #admirals
+  ac_kaname:0 "Kaname"
+  ac_suomi:0 "Suomi"
+  ac_akiho_taniguchi:0 "Akiho Taniguchi"
+  ac_sill_plain:0 "Sill Plain"
+ #advisors
+  ac_mika_amano:0 "Mika Amano"
+#MAH
+ #leaders
+  ac_asuka_ootorii:0 "Asuka Ootorii"
+  ac_nanoha_takamachi:0 "Nanoha Takamachi"
+  ac_usagi_tsukino:0 "Usagi Tsukino"
+  ac_momo_chiyoda:0 "Momo Chiyoda"
+ #advisors
+  ac_hitomi_tsukishiro:0 "Hitomi Tsukishiro"
+  ac_kobato_hanato:0 "Kobato Hanato"
+
+ #marshal
+
+ #generals
+  ac_madoka_kaname:0 "Madoka Kaname"
+  ac_Illyasviel_von_einzbern:0 "Illyasviel von Einzbern"
+  ac_arika_yumemiya:0 "Arika Yumemiya"
+  ac_ami_mizuno:0 "Ami Mizuno"
+  ac_makoto_kino:0 "Makoto Kino"
+  ac_minako_aino:0 "Minako Aino"
+  ac_rei_hino:0 "Rei Hino"
+  ac_chisato_yonamine:0 "Chisato Yonamine"
+  ac_kurumi_mugen:0 "Kurumi Mugen"
+  ac_homura_akemi:0 "Homura Akemi"
+  ac_subaru_nakajima:0 "Subaru Nakajima"
+  ac_vivio:0 "Vivio"
+  ac_fate_testarossa:0 "Fate Testarossa"
+  ac_saki_uno:0 "Saki Uno"
+  ac_hayato_juumonji:0 "Hayato Juumonji"
+  ac_frill:0 "Frill"
+  ac_mia_cyrus:0 "Mia Cyrus"
+  ac_honey_kisaragi:0 "Honey Kisaragi"
+  ac_mai_tokiha:0 "Mai Tokiha"
+  ac_lena_sayers:0 "Lena Sayers"
+  ac_maron_kusakabe:0 "Maron Kusakabe"
+  ac_nagisa_misumi:0 "Nagisa Misumi"
+  ac_honoka_yukishiro:0 "Honoka Yukishiro"
+  ac_himeno_awayuki:0 "Himeno Awayuki"
+  ac_sakura_kinomoto:0 "Sakura Kinomoto"
+  ac_mint_aizawa:0 "Mint Aizawa"
+  ac_zakuro_fujiwara:0 "Zakuro Fujiwara"
+  ac_komugi_yoshida:0 "Komugi Yoshida"
+  ac_amanogawa_kirara:0 "Amanogawa Kirara"
+  ac_ichinose_minori:0 "Ichinose Minori"
+  ac_laura_la_mer:0 "Laura La Mer"
+  ac_momozono_love:0 "Momozono Love"
+  ac_natsuumi_manatsu:0 "Natsuumi Manatsu"
+  ac_shiratori_yuriko:0 "Shiratori Yuriko"
+  ac_takizawa_asuka:0 "Takizawa Asuka"
+
+ #admirals
+  ac_sakuyo_mikage:0 "Sakuyo Mikage"
+  ac_akane_isshiki:0 "Akane Isshiki"
+  ac_utena_tenjou:0 "Utena Tenjou"
+  ac_lucia_nanami:0 "Lucia Nanami"
+#MEH
+ #lider
+  ac_kos-mos:0 "KOS-MOS"
+  ac_fiora_mechon:0 "Fiora Mechon"
+  ac_mythra:0 "Mythra"
+  ac_histoire:0 "Histoire"
+
+ #marshal
+  ac_iris_heart:0 "Iris Heart"
+ #generals
+  ac_alisa_boskonovich:0 "Alisa Boskonovich"
+  ac_risa_android:0 "Risa"
+  ac_2b:0 "2B"
+  ac_cibo:0 "Cibo"
+  ac_a2:0 "A2"
+  ac_svetlana_sakura:0 "Svetlana Sakura"
+  ac_alexandra_frolova:0 "Alexandra Frolova"
+  ac_edi:0 "EDI"
+  ac_pyra:0 "Pyra"
+  ac_rozen_s_series:0 "Rozen S Series"
+  ac_clarion:0 "Clarion"
+  ac_maki_ivanova:0 "Maki Ivanova"
+  ac_pneuma:0 "Pneuma"
+  ac_hatsune_miku:0 "Hatsune Miku"
+  ac_hana:0 "Hana"
+  ac_automaton:0 "Automaton"
+  ac_phantom_queen_ex-xecty:0 "Phantom Queen Ex-Xecty"
+  ac_mhmd_02_haruko:0 "MHMD 02 Haruko"
+  ac_t-elos:0 "T-Elos"
+  ac_aino:0 "Aino"
+  ac_rose_android:0 "Rose Android"
+  ac_elizabeth:0 "Elizabeth"
+  ac_vivy:0 "Vivy"
+  ac_norimaki_arale:0 "Norimaki Arale"
+
+ #admiral
+  ac_ashigara_arp:0 "Ashigara ARP"
+  ac_takao_arp:0 "Takao ARP"
+  ac_i-410:0 "I-410"
+  ac_haruna:0 "Haruna ARP"
+  ac_kirishima:0 "Kirishima ARP"
+  ac_kongou_arp:0 "Kongou ARP"
+  ac_atago_arp:0 "Atago ARP"
+  ac_caseal:0 "Caseal"
+  ac_hiei_arp:0 "Hiei ARP"
+ #advisor
+  ac_yurizaki_mira:0 "Yurizaki Mira"
+#MMS
+ #lider
+  ac_velvet_crowe:0 "Velvet Crowe"
+  ac_yuuko_yoshida:0 "yuuko_yoshida"
+  ac_maou:0 "Maou"
+  ac_holo:0 "Holo"
+ #marshal
+  ac_fino_bloodstone:0 "Fino Bloodstone"
+  ac_rhea:0 "Rhea"
+  ac_shiraori:0 "Shiraori"
+  ac_ishtar:0 "Ishtar"
+
+ #generals
+  ac_lilith:0 "Lilith"
+  ac_rose:0 "Rose"
+  ac_morrah:0 "Morrah"
+  ac_ripine:0 "Ripine"
+  ac_dullahan:0 "Dullahan"
+  ac_milla_maxwell:0 "Milla Maxwell"
+  ac_astaroth:0 "Astaroth"
+  ac_laharl_girl:0 "Laharl"
+  ac_desco:0 "Desco"
+  ac_tiamat:0 "Tiamat"
+  ac_belldandy:0 "Belldandy"
+  ac_corrin:0 "Corrin"
+  ac_lucy:0 "Lucy"
+  ac_makina_hoshimura:0 "Makina Hoshimura"
+  ac_saya_kisaragi:0 "Saya Kisaragi"
+  ac_zero_two:0 "02"
+  ac_vignette_april_tsukinose:0 "Vignette April Tsukinose"
+  ac_satanichia_mcdowell_kurumizawa:0 "Satanichia Mcdowell Kurumizawa"
+  ac_arnice:0 "Arnice"
+  ac_saya_otonashi:0 "Saya Otonashi"
+  ac_marie_von_eisenberg:0 "Marie von Eisenberg"
+  ac_kurari_rose:0 "Kurari Rose"
+  ac_heine:0 "Heine"
+  ac_freyja:0 "Freyja"
+  ac_saphentite_neikes:0 "Saphentite Neikes"
+  ac_miia:0 "Miia"
+  ac_asmodeus:0 "Asmodeus"
+ #Admirals
+  ac_yamato_wg:0 "Yamato WG"
+  ac_purifier:0 "Purifier"
+  ac_tester:0 "Tester"
+  ac_meroune_lorelei:0 "Meroune Lorelei"
+ #advisors
+  ac_shigure:0 "Shigure"
+ ac_prinz_eugen:0 "Prinz Eugen"
+ ac_lilia_eberwein:0 "Lilia Eberwein"
+ ac_catue_dragundaala:0 "Catue Dragundaala"
+ ac_violet_evergarden:0 "Violet Evergarden"
+
+#TRP
+ ac_homare_nao:0 "Homare Nao"
+ ac_takumi_musashino:0 "Takumi Musashino"
+ #leaders
+  ac_astolfo:0 "Astolfo"
+  ac_hideri_kanzaki:0 "Hideri Kanzaki"
+  ac_tetora:0 "Tetora"
+  ac_ringo_tsukimiya:0 "Ringo Tsukimiya"
+ #marshal
+  ac_felix_argyle:0 "Felix Argyle"
+ #generals
+  ac_oboro_tsukimigusa:0 "Oboro Tsukimigusa"
+  ac_hitoshi_sugoroku:0 "Hitoshi Sugoroku"
+  ac_kaoru_hanase:0 "Kaoru Hanase"
+  ac_aoi_hyoudou:0 "Aoi Hyoudou"
+  ac_kaguya_arikawa:0 "Kaguya Arikawa"
+  ac_tama_kyan:0 "Tama Kyan"
+  ac_hime_arikawa:0 "Hime Arikawa"
+  ac_sylvia:0 "Sylvia"
+  ac_birdy_cephon_altera:0 "Birdy Cephon Altera"
+  ac_souji_mitsuka:0 "Souji Mitsuka"
+  ac_ranga:0 "Ranga"
+  ac_yukikaze:0 "Yukikaze"
+  ac_mitsunaga_oda:0 "Mitsunaga Oda"
+  ac_ritsu_souma:0 "Ritsu Souma"
+  ac_xianming_lin:0 "Xianming Lin"
+  ac_mizuho_miyanokouji:0 "Mizuho Miyanokouji"
+  ac_youta_tsunashi:0 "Youta Tsunashi"
+  ac_fish_eye:0 "Fish Eye"
+  ac_hacka_doll_3:0 "Hacka Doll 3"
+  ac_shirota_mitsuki:0 "Shirota Mitsuki"
+  ac_tiger_traps:0 "Tiger Traps"
+  ac_jun_hiiragi:0 "Jun Hiiragi"
+ #Admirals
+  ac_ranma_saotome:0 "Ranma Saotome"
+  ac_hamaji_yakumo:0 "Hamaji Yakumo"
+  ac_taroumaru_seike:0 "Taroumaru Seike"
+  ac_mariya_shidou:0 "Mariya Shidou"
+  ac_russell:0 "Russell"
+ #advisor
+  ac_mare_bello_fiore:0 "Mare Bello Fiore"
+  ac_aoi_futaba:0 "Aoi Futaba"
